2017-04-24  Hani Benhabiles  <hani.benhabiles@greenbone.net>

	* src/pluginscheduler.c (plugins_scheduler_next): Fix compilation
	warning with GCC 7.

2017-04-21  Juan Jose Nicola  <juan.nicola@greenbone.net>

	* Changelog: Correct a wrong entry date.

2017-04-21  Juan Jose Nicola  <juan.nicola@greenbone.net>

	Backport r28264 with adjustments due to code changes.

	* src/attack.c (attack_start, launch_plugin): Use consistent
	hostname (ip) logging. Add fqdn to the messages.

2017-03-27  Juan Jose Nicola  <juan.nicola@greenbone.net>

	Backport r28088, r28091, with adjustments due to code changes.

	* src/openvassd.c: Include network.h and add preprocessor directives to
	check the gnutls version.
	(main): Call openvas_SSL_init to initialize gnutls to avoid SIGSEGV
	in gnutls version prior to 3.3.0. Add preprocessor directives to
	check the gnutls version.

2017-03-10  Hani Benhabiles  <hani.benhabiles@greenbone.net>

	Backport r27968.

	* src/pluginscheduler.c (plugins_scheduler_next): Simplify checks for
	returning PLUG_RUNNING.

2017-03-07  Michael Wiegand <michael.wiegand@greenbone.net>

	Post release version bump.

	* CMakeLists.txt: Set version to 5.1.2.

2017-03-07  Michael Wiegand <michael.wiegand@greenbone.net>

	Preparing the openvas-scanner 5.1.1 release.

	* CHANGES: Updated.

2017-02-03  Hani Benhabiles  <hani.benhabiles@greenbone.net>

	Backport r27340.

	* src/attack.c (launch_plugin): Check for Host/dead and Host/ping_failed
	before attempting to launch the plugin.

2017-01-03  Hani Benhabiles  <hani.benhabiles@greenbone.net>

	Backport r26905.

	* src/comm.c (comm_wait_order): Zero str buffer. Fixes possible infinite
	loop.

2016-11-29  Hani Benhabiles  <hani.benhabiles@greenbone.net>

	Backport r26731.

	* src/openvassd.c (reload_openvassd): Reinitialize logging on scanner
	reload.

2016-11-09  Michael Wiegand <michael.wiegand@greenbone.net>

	Post release version bump.

	* CMakeLists.txt: Set version to 5.1.1.
